--- a/src/resources/scss/layout/_header.scss
+++ b/src/resources/scss/layout/_header.scss
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  max-width: 100vw;
   z-index: 2;
   display: flex;
   align-items: stretch;
